tests/baselines/reference/extendsTag3.errors.txt
tests/cases/conformance/jsdoc/foo.js(14,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.


==== tests/cases/conformance/jsdoc/foo.js (1 errors) ====
    /**
     * @constructor
     */
    class A {
        constructor() {}
    }
    
    /**
     * @extends {A}
     * @constructor
     */
    class B extends A {
        constructor() {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
        }
    }
    